# sitePS

./: PKG-INFO  README.md  pyproject.toml
src/sitePS/: __init__.py  main.py  plot_msa.py  preprocess2csv.py  sites_add_PS.py
src/sitePS.egg-info/: SOURCES.txt  requires.txt  top_level.txt
