[project]
name = "sitePS"
version = "0.0.1"
authors = [
  { name="dabaixian", email="178332469@qq.com" },
]
dependencies = ['pymsaviz', 'numpy', 'pandas>=2.1.1']
description = "Phylogenetic positioning of amino acid sites in human proteins"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/Dabaixian/sitePS"
Issues = "https://github.com/Dabaixian/sitePS/issues"